--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -15,6 +15,7 @@
     </ul>
   </div>
 </div>
+<% if user_signed_in? %>
 <div class="row" id="edit-comment-<%=comment.id%>" style="display:none">
   <div class="span7 seperator"></div>
   <div class="span7">
@@ -27,3 +28,4 @@
 	<% end %>
   </div>
 </div>
+<% end %>
