--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -64,3 +64,31 @@
   </div>
   <% end %>
 </div>
+
+<div class="modal hide fade in" id="modal-login">
+  <%= form_for(User.new,:url => user_session_path,:html=>{:style=>"margin:0"}) do |f| %>
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>登录</h3>
+  </div>
+  <div class="modal-body" id="modal-body-login">
+    <div class="row">
+      <div class="span5 offset1">
+	    <%= f.label :login %>
+        <%= f.text_field :login,:class=>"span4"%>
+	    <%= f.label :password %>
+        <%= f.password_field :password,:class=>"span4" %>
+        <p class="help-block">
+          <%= link_to  new_registration_path(User) do %>
+            还没有账号？<span class="highlight">欢迎注册</span>
+          <% end %>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <a href="javascript:;" class="btn" data-dismiss="modal">关闭</a>
+    <%= f.submit "登录",:class => "btn btn-primary",:disable_with => "登录..." %>
+  </div>
+  <% end %>
+</div>
