--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,5 +1,31 @@
 <% title "发布新主意 - 用户" %>
 <div class="row">
+  <div class="span2 offset1">
+    <div class="well">
+      <h2>新发布</h2>
+      <p>用户发布方案和评论，不能对方案进行投票。</p>
+	</div>
+  </div>
+  <div class="span2">
+    <button class="btn btn-large"  style="margin-top:40px">&larr; 审核通过 &rarr;</button>
+  </div>
+  <div class="span2">
+    <div class="well">
+	  <h2>投票中</h2>
+	  <p>对方案投票，好的方案被选中作为实施方案。</p>
+	</div>
+  </div>
+  <div class="span2">
+    <button class="btn btn-large" style="margin-top:40px">&larr; 完成实施 &rarr;</button>
+  </div>
+  <div class="span2">
+	<div class="well">
+	  <h2>已实施</h2>
+	  <p>已经被实施的主意，用户想法得到了肯定。</p>
+	</div>
+  </div>
+</div>
+<div class="row">
   <div class="span8 offset2">
     <%= errors_msg_tag @idea %>
     <%= form_for(@idea,:html=>{:class=>"form-horizontal"}) do |f| %>
@@ -22,7 +48,12 @@
 	      <%= f.label :tag_names,:class=>"control-label" %>
 	      <div class="controls">
             <%= f.text_field :tag_names, :class => "input-xlarge" %>
-            <p class="help-block">空格间隔，最多3个</p>
+            <span class="help-inline">空格间隔，最多3个</span>
+            <ul class="unstyled home-tags">
+              <% Tag.random(10).each do |tag| %>
+	            <li><a href="javascript:;" class="btn btn-mini btn-info btn-tag"><%= tag.name %></a></li>
+              <% end %>
+            </ul>
           </div>
         </div>
 	    <div class="control-group">
