--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -10,7 +10,7 @@
       </ul>
       <% if user_signed_in? %>
         <ul class="nav pull-right">
-          <li id="inbox"><a href="javascript:;" rel="popover" data-original-title="<a href='/users/inbox'>查看全部</a>" data-content="<table class='table' style='width:100%'><% current_user.messages.where(:readed => false).order('created_at DESC').each do |message|%><tr><td><a href='/messages/<%= message.id %>' class='message'><%= message.content %><span class='shallow' style='float:right'><%= distance_of_time_in_words_to_now message.created_at %></span></a></td></tr><% end %></table>" data-placement="bottom" data-trigger="manual"><span class="label label-important" style="display:inline-block;width:18px;height:18px;text-align:center;font-size:14px;line-height:18px"><%= current_user.messages.where(:readed => false).count %></span></a></li>
+          <li id="inbox"><%= link_to message_span_tag(current_user.messages.where(:readed => false).count),inbox_users_path,"data-original-title"=>"站内消息","data-placement"=>"bottom",:rel=>"tooltip"%></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %><b class="caret"></b></a>
             <ul class="dropdown-menu">
