--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -29,13 +29,15 @@
 	</div>
   </section>
 <% end %>
-<section id="tags" class="section-topic">
-  <div class="page-header">
-	<h1>标签</h1>
-  </div>
-  <ul class="unstyled home-tags">
-    <% @tags.each do |tag| %>
-	  <li><i class="icon-tag"></i>&nbsp;<%= link_to tag.name,tag_path(tag.name) %><span class="shallow">&nbsp;x&nbsp;<%= tag.ideas_count %></span></li>
-    <% end %>
-  </ul>
-</section>
+<% unless @tags.empty? %>
+  <section id="tags" class="section-topic">
+    <div class="page-header">
+	  <h1>标签</h1>
+    </div>
+    <ul class="unstyled home-tags">
+      <% @tags.each do |tag| %>
+	    <li><i class="icon-tag"></i>&nbsp;<%= link_to tag.name,tag_path(tag.name) %><span class="shallow">&nbsp;x&nbsp;<%= tag.ideas_count %></span></li>
+      <% end %>
+    </ul>
+  </section>
+<% end %>
