--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -14,7 +14,13 @@
 	  </tr>
     </thead>
     <tbody id="topics">
-      <%= render @topics %>
+    <% @topics.each do |topic| %>
+      <tr>
+        <td><%= topic.name %></td>
+        <td><%= topic.ideas.count %></td>
+        <td><%= link_to "修改",edit_topic_path(topic),:class => "btn btn-small btn-primary"%> <%= link_to "删除",topic,:method => :delete,:remote => true,:class => "btn btn-small btn-danger",:id => "del-topic-#{topic.id}"%></td>
+      </tr>
+    <% end %>
     </tbody>
   </table>
 </div>
