--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,6 +23,9 @@ body {
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
+.navbar .brand{
+  padding:2px 20px;
+}
 .sidebar-nav {
  padding: 9px 0;
 }
@@ -54,6 +57,10 @@ img.profile_picture_small {
   height: 32px;
   padding: 2px;
   border:1px solid #DDD;
+}
+img.site_logo{
+  width: 40px;
+  height: 40px;
 }
 .indicator{
   width:24px;
