--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row" id="idea-<%=idea.id%>">
   <div class="span6">
-    <div class="idea-title"><%= link_to idea.title,idea,:title => idea.title %></div>
+    <div class="idea-title"><%= link_to idea.title,idea_path("#{idea.id}-#{idea.title}"),:title => idea.title %></div>
 	<div class="idea-label"><%= status_span_tag idea %><span><i class="icon-comment"></i>&nbsp;<%= link_to idea.topic.name,topic_path("#{idea.topic.id}-#{idea.topic.name}") %></span>
       <% if idea.tags.any? %>
         <span><i class="icon-tags"></i>
