--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -1,4 +1,4 @@
-<% title "主意 - #{@idea.title} - #{Preference.option(PREFERENCE_SITE_NAME)}" %>
+<% title "主意 - #{@idea.title} - #{@site.name}" %>
 <%= flash_msg_tag flash[:alert],"alert-error" %>
 <%= handle_idea_button @idea %>
 <% if @idea.favorers.count > 0%>
