--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
-<% title "标签 - #{@tag.name} - #{Preference.option(PREFERENCE_SITE_NAME)}" %>
+<% title "标签 - #{@tag.name} - #{@site.name}" %>
 <div class="head-title">
   <h1>标签：<%=@tag.name%></h1>
 </div>
