--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -5,7 +5,7 @@
       <% if idea.tags.any? %>
         <span><i class="icon-tags"></i>
         <% idea.tags.each do |tag| %>
-          <%= link_to tag.name,tag_path(tag.name) %>
+          <%= link_to tag.name,tag_path("#{tag.id}-#{tag.name}") %>
         <% end %>
         </span>
       <% end %>
