--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -7,7 +7,7 @@
       <% end %>
       <% if user_signed_in? %>
         <ul class="nav pull-right">
-          <li id="inbox"><%= link_to message_span_tag(current_user.messages.where(:readed => false).count),inbox_users_path,"data-original-title"=>"站内消息","data-placement"=>"bottom",:rel=>"tooltip"%></li>
+          <li id="inbox"><%= link_to message_span_tag(current_user.messages.where(:readed => false).count),'#',"data-original-title"=>"站内消息","data-placement"=>"bottom",:rel=>"tooltip"%></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %><b class="caret"></b></a>
             <ul class="dropdown-menu">
