--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -2,8 +2,8 @@
   <div class="span9 seperator"></div>
   <div class="span2">
 	<ul class="unstyled user-info">
-	  <li><%= link_to image_tag(idea.user.avatar.url(:small),:class=>"profile_picture"),user_path(idea.user.username) %></li>
-	  <li><%= link_to idea.user.username,user_path(idea.user.username) %></li>
+	  <li><%= link_to image_tag(idea.user.avatar.url(:small),:class=>"profile_picture"),user_path("#{idea.user.id}-#{idea.user.username}") %></li>
+	  <li><%= link_to idea.user.username,user_path("#{idea.user.id}-#{idea.user.username}") %></li>
 	  <li class="shallow"><%= idea.user.description %></li>
       <li>
         <% if idea.user.website %><%= link_to image_tag("icon_world_link.png"),idea.user.website,"rel"=>"tooltip","data-original-title"=>"个人主页","data-placement"=>"top" %><% end %>
