add cap solr reindex task and fix a simple bug

--- a/app/views/ideas/search.html.erb
+++ b/app/views/ideas/search.html.erb
@@ -3,7 +3,7 @@
   <%=text_field_tag :q,@idea_query,:class=> "input-xlarge search-query",:placeholder => '搜索主意...' %>
   <%= button_tag "搜索",:class=>"btn",:name => nil %>
 <% end %>
-<% if @ideas %>
+<% if @ideas.empty? %>
   <div id="search-ideas">
     <% @ideas.each do |idea| %>
 	  <div>
