--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -4,15 +4,15 @@
 <% @topics.each do |topic| %>
   <section class="section-topic">
     <div class="page-header">
-	  <h1><%= link_to image_tag(topic.logo.url(:small),:class=>"profile_picture"),topic_path(topic.name) %> <%= link_to topic.name,topic_path(topic.name)%></h1>
+	  <h1><%= link_to image_tag(topic.logo.url(:small),:class=>"profile_picture"),topic_path(topic.name) %> <%= link_to topic.name,topic_path("#{topic.id}-#{topic.name}")%></h1>
 	</div>
 	<div class="row">
       <% topic.status_ideas.each do |status,idea| %>
 	    <div class="span4">
 		  <h2><%= I18n.t("app.idea.status.#{status}") %></h2>
           <% if idea %>
-		    <div class="home-user"><%= link_to image_tag(idea.user.avatar.url(:small),:class=>"profile_picture"),user_path(idea.user.username) %><%= link_to idea.user.username,user_path(idea.user.username),:class=>"home-user-name" %></div>
-		    <div class="home-idea-title"><%= link_to idea.title,idea,:title => idea.title %></div>
+		    <div class="home-user"><%= link_to image_tag(idea.user.avatar.url(:small),:class=>"profile_picture"),user_path("#{idea.user.id}-#{idea.user.username}") %><%= link_to idea.user.username,user_path("#{idea.user.id}-#{idea.user.username}"),:class=>"home-user-name" %></div>
+		    <div class="home-idea-title"><%= link_to idea.title,idea_path("#{idea.id}-#{idea.title}"),:title => idea.title %></div>
 		    <div class="home-idea-entry"><%= auto_link(idea.description) %></div>
           <% else %>
             <p><span class="label label-warning">还有没有主意！</span></p>
@@ -36,7 +36,7 @@
     </div>
     <ul class="unstyled home-tags">
       <% @tags.each do |tag| %>
-	    <li><i class="icon-tag"></i>&nbsp;<%= link_to tag.name,tag_path(tag.name) %><span class="shallow">&nbsp;x&nbsp;<%= tag.ideas_count %></span></li>
+	    <li><i class="icon-tag"></i>&nbsp;<%= link_to tag.name,tag_path("#{tag.id}-#{tag.name}") %><span class="shallow">&nbsp;x&nbsp;<%= tag.ideas_count %></span></li>
       <% end %>
     </ul>
   </section>
