--- a/app/views/ideas/search.html.erb
+++ b/app/views/ideas/search.html.erb
@@ -4,7 +4,7 @@
     <% @ideas.each do |idea| %>
 	  <div>
 		<div class="seperator"></div>
-		<div class="idea-title"><%= link_to idea.title,idea,:title=>idea.title%></div>
+		<div class="idea-title"><%= link_to idea.title,idea_path("#{idea.id}-#{idea.title}"),:title=>idea.title%></div>
 		<div class="idea-label">
           <%= status_span_tag idea %>
           <span><i class="icon-comment"></i>&nbsp;<%= idea.topic.name %></span>
