--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -27,7 +27,7 @@
 		    <h4>话题</h4>
 		    <ul class="unstyled topics">
               <% Topic.all.each do |topic| %>
-			    <li><i class="icon-comment"></i>&nbsp;<%= link_to topic.name,topic_path(topic.name) %></li>
+			    <li><i class="icon-comment"></i>&nbsp;<%= link_to topic.name,topic_path("#{topic.id}-#{topic.name}") %></li>
               <% end %>
 	        </ul>
           <% end %>
@@ -35,7 +35,7 @@
 			<h4>热门标签</h4>
 			<ul class="unstyled hot-tags">
               <% Tag.limit(15).order("ideas_count desc").where("ideas_count>0").each do |tag| %>
-				<li><i class="icon-tag"></i>&nbsp;<%= link_to tag.name,tag_path(tag.name) %><span class="shallow">&nbsp;x&nbsp;<%= tag.ideas_count %></span></li>
+				<li><i class="icon-tag"></i>&nbsp;<%= link_to tag.name,tag_path("#{tag.id}-#{tag.name}") %><span class="shallow">&nbsp;x&nbsp;<%= tag.ideas_count %></span></li>
               <% end %>
 			</ul>
           <% end %>
