--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
   <div class="span7">
     <h1><%= @user.username %></h1>
     <ul class="unstyled user-info">
-      <li><span class="label label-info"><%= role_tag @user %></span></li>
+      <li><span class="label label-info"><%= role_tag @user,@site %></span></li>
       <li><span class="label label-success">发布<%= @ideas_count %>个主意</span> <span class="label label-success">关注<%= @ideas_favored_count %>个主意</span> <span class="label label-success"></li>
       <% if @user.website %><li><%= link_to @user.website,@user.website %></li><% end %>
       <li class="shallow"><%= @user.description %></li>
